--- a/README
+++ b/README
@@ -1,7 +1,12 @@
-MIPS-Datapath is written by Andrew Gascoyne-Cecil.
+MIPS-Datapath is a graphical MIPS simulator written by Andrew Gascoyne-Cecil.
 
-MIPS-Datapath is released under the terms of the GNU General Public License Version 3. (see http://www.gnu.org/licenses/gpl.html)
+MIPS-Datapath supports a small subset of the full MIPS instruction set. The flow of data within a graphical representation of a MIPS simulator can be displayed in one of three modes: simplified, pipelined, and data forwarding. MIPS-Datapath is designed as a tool for learning about how processors work from the ground up.
 
-This program requires the wxWidgets, OpenGL and GLUT development libraries to be installed.
+The application uses wxWidgets for a cross-platform graphical user interface. (see http://www.wxwidgets.org)
+
+MIPS-Datapath is released under the terms of the GNU General Public License Version 3.
+(see http://www.gnu.org/licenses/gpl.html)
+
+Development of this program requires the wxWidgets and GLUT development libraries to be installed.
 
 
